# src/main/java/com/exam/hei/endpoint/rest/model/Token.java
@@ -1,0 +1,25 @@
+package com.exam.hei.endpoint.rest.model;
+
+import com.fasterxml.jackson.databind.PropertyNamingStrategies;
+import com.fasterxml.jackson.databind.annotation.JsonNaming;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.ToString;
+
+/** Response of {@code POST /auth/login}. */
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@ToString
+@JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
+public class Token {
+
+  @ToString.Exclude private String accessToken;
+  private String tokenType;
+  private Long expiresIn;
+}
